--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,6 @@
 <header>
   <p>SDGSDGSDGSDG {{currentYear}}</p>
+  <a href="/">Home</a>
+  <a href="/about">About</a>
+  <a href="/projects">Projects</a>
 </header>
